commit files for changes

--- a/BI/BI.csproj
+++ b/BI/BI.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Maps\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Contracts\Contracts.csproj" />
+  </ItemGroup>
+
 </Project>
