--- a/ClimateControlModuleBackEnd/ClimateControlModuleBackEnd.csproj
+++ b/ClimateControlModuleBackEnd/ClimateControlModuleBackEnd.csproj
@@ -7,7 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+	  <!--library that makes it easy to generate Swagger/OpenAPI documentation for your ASP.NET Core APIs.-->
+	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BI\BI.csproj" />
+    <ProjectReference Include="..\Contracts\Contracts.csproj" />
+    <ProjectReference Include="..\DTO\DTO.csproj" />
   </ItemGroup>
 
 </Project>
