shifting API url to app settings.json file

--- a/ClimateControlModuleBackEnd/appsettings.json
+++ b/ClimateControlModuleBackEnd/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "BOMApiSettings": {
+    "Url": "https://www.bom.gov.au/fwo/IDS60901/IDS60901.{0}.json"
+   }
 }
